--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -87,6 +87,14 @@
       }
     }
 
+    &[data-expanded="true"] {
+      width: var(--full-width) !important; /* 始终保持展开状态 */
+      .text {
+        opacity: 1;
+        transform: translate(0);
+      }
+    }
+
     .text,
     .icon {
       display: flex;
@@ -479,7 +487,7 @@
     width: $calc-image-width;
     height: $calc-image-width;
   }
-  
+
   .chat-message-item-image {
     max-width: calc(100vw/3*2);
   }
@@ -646,6 +654,7 @@
     bottom: 30px;
   }
 }
+
 
 .shortcut-key-container {
   padding: 10px;
